<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:title="Топливная карта"
            android:id="@+id/toolbar"
            app:titleTextColor="?attr/colorControlNormal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView android:layout_width="0dp"
                android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="8dp"
                      android:text="@string/card_number" android:fontFamily="serif"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/tv_card_number" android:inputType="number"/>
            <TextView
                    android:text="@string/bank_num"
                    android:layout_width="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:fontFamily="serif"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/tv_bank_card_number" android:inputType="number"/>
            <TextView
                    android:text="@string/valid_thru"
                    android:layout_width="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:fontFamily="serif"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/tv_expiring_date"/>
            <TextView
                    android:text="@string/payment_system"
                    android:layout_width="match_parent"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content" android:id="@+id/tvCompany" android:fontFamily="serif"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/etCompany" android:inputType="text"/>
        </LinearLayout>

    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_plus"
            android:id="@+id/fabCapturePhoto" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>